fixed spacing issues for profile page

--- a/ngFreeCamp/src/app/components/person/person.component.css
+++ b/ngFreeCamp/src/app/components/person/person.component.css
@@ -11,7 +11,8 @@ margin: auto;
 } */
 
 .container{
-  padding:4%;
+  padding-top:3%;
+  padding-bottom:4%;
 }
 .container .img{
   text-align:center;
@@ -21,7 +22,7 @@ margin: auto;
 }
 
 .myPics{
-  padding:4%;
+  padding-top:5%;
 }
 
 .myCampsites{
